# search-portal

./: README.md  example.toml  pyproject.toml
.github/workflows/: deploy.yaml
src/search_portal/: __init__.py
